fixed the drop down menu, made it dark mode, fixed hover and on active (#449)
* fixed the drop down menu, made it dark mode, fixed hover and on active

* fixed bootsrap classes

* more bootsrap classes

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -241,3 +241,52 @@
 .profile-icon-dropdown {
     margin-right: 16px;
 }
+
+.menu-dropdown-item {
+    border-radius: 10px;
+}
+
+.menu-dropdown-item:hover {
+    border-radius: 10px;
+}
+
+.menu-dropdown-item:active {
+    background-color: #d6d6d6;
+    color: black;
+}
+
+.dropdown-menu-item-list {
+    padding: 0px 5px 0px 5px;
+}
+
+.menu-item-divider {
+    margin-left: auto;
+    margin-right: auto;
+    width: 89%;
+}
+
+.dropdown-menu-dark-mode {
+    background-color: var(--dark-mode-theme);
+    box-shadow: 0px 0px 1px var(--dark-mode-smooth-theme);
+}
+
+.menu-dropdown-item-dark-mode {
+    color: white;
+}
+
+.logout-icon-dark-mode {
+    color:white;
+}
+
+.dropdown-divider-dark-mode {
+    color: white;
+}
+
+.menu-dropdown-item-dark-mode:hover {
+    background-color: var(--dark-mode-hover-color);
+}
+
+.menu-dropdown-item-dark-mode:active {
+    background-color: #6e6e6e;
+    color: white;
+}
